Implement various utils and sketch an FRP system

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -8,6 +8,9 @@
 <body>
 <div id="root"></div>
 <script src="kotlin-kotlin-stdlib.js"></script>
+<script src="kotlinx-benchmark-kotlinx-benchmark-runtime.js"></script>
+<script src="kotlinx-serialization-kotlinx-serialization-core.js"></script>
+<script src="kotlinx-serialization-kotlinx-serialization-json.js"></script>
 <script src="PatternTool-app.js"></script>
 </body>
 </html>
