--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -8,6 +8,7 @@
 <body>
 <div id="root"></div>
 <script src="kotlin-kotlin-stdlib.js"></script>
+<script src="kotlin_org_jetbrains_kotlin_kotlin_dom_api_compat.js"></script>
 <script src="kotlinx-benchmark-kotlinx-benchmark-runtime.js"></script>
 <script src="kotlinx-serialization-kotlinx-serialization-core.js"></script>
 <script src="kotlinx-serialization-kotlinx-serialization-json.js"></script>
