--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -12,6 +12,12 @@
 <script src="kotlinx-benchmark-kotlinx-benchmark-runtime.js"></script>
 <script src="kotlinx-serialization-kotlinx-serialization-core.js"></script>
 <script src="kotlinx-serialization-kotlinx-serialization-json.js"></script>
+<script src="DevToolkt-core.js"></script>
+<script src="DevToolkt-math.js"></script>
+<script src="DevToolkt-geometry.js"></script>
+<script src="DevToolkt-pureDom.js"></script>
+<script src="DevToolkt-reactive.js"></script>
+<script src="DevToolkt-reactiveDom.js"></script>
 <script src="PatternTool-app.js"></script>
 </body>
 </html>
