--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -6,6 +6,7 @@
     <title>My Kotlin/JS App</title>
 </head>
 <body>
+<script src="https://unpkg.com/path-data-polyfill@1.0.10/path-data-polyfill.js"></script>
 <script src="kotlin-kotlin-stdlib.js"></script>
 <script src="kotlin_org_jetbrains_kotlin_kotlin_dom_api_compat.js"></script>
 <script src="kotlinx-benchmark-kotlinx-benchmark-runtime.js"></script>
