--- a/app3d/index.html
+++ b/app3d/index.html
@@ -19,6 +19,7 @@
     </style>
 </head>
 <body>
-<script src="build/kotlin-webpack/js/productionExecutable/app.js"></script>
+<!--<script src="build/kotlin-webpack/js/productionExecutable/app.js"></script>-->
+<script src="build/kotlin-webpack/js/developmentExecutable/app.js"></script>
 </body>
 </html>
