--- a/geometrySandboxTool/src/jsMain/resources/index.html
+++ b/geometrySandboxTool/src/jsMain/resources/index.html
@@ -18,6 +18,6 @@
 <script src="DevToolkt-pureDom.js"></script>
 <script src="DevToolkt-reactive.js"></script>
 <script src="DevToolkt-reactiveDom.js"></script>
-<script src="PatternTool-app.js"></script>
+<script src="PatternTool-geometrySandboxTool.js"></script>
 </body>
 </html>
