Improve the polynomial plot layout

--- a/geometrySandboxTool/index.html
+++ b/geometrySandboxTool/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Kotlin/JS App</title>
     <style>
-        body {
+        html, body {
             margin: 0;
+            padding: 0;
+            width: 100vw;
+            height: 100vh;
         }
 
-        canvas {
+        body {
             display: flex;
+            align-items: stretch;
+            overflow: hidden;
         }
     </style>
 </head>
