--- a/cupLayoutTool/index.html
+++ b/cupLayoutTool/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Kotlin/JS App (3D)</title>
+    <title>cupLayoutTool</title>
     <style>
         body {
             margin: 0;
